[gd_scene load_steps=5 format=3 uid="uid://bsh33b4p03ayd"]

[ext_resource type="Script" path="res://addons/silent_wolf/Auth/ConfirmEmail.gd" id="1"]
[ext_resource type="Theme" uid="uid://bwnv8b362a2w7" path="res://menus/menu_theme.tres" id="1_5rf2p"]
[ext_resource type="PackedScene" uid="uid://clllbf6am8qdf" path="res://addons/silent_wolf/common/SWButton.tscn" id="2"]
[ext_resource type="PackedScene" uid="uid://cgn5lp08830p8" path="res://ui/transition.tscn" id="4_6h3fc"]

[node name="ConfirmEmail" type="TextureRect"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = -1920.0
offset_bottom = -1080.0
theme = ExtResource("1_5rf2p")
script = ExtResource("1")

[node name="FormContainer" type="VBoxContainer" parent="."]
layout_mode = 0
offset_left = 425.0
offset_top = 290.0
offset_right = 1495.0
offset_bottom = 907.0
theme_override_constants/separation = 24

[node name="Label" type="Label" parent="FormContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 72
text = "Confirm your email address"
horizontal_alignment = 1

[node name="UsernameContainer" type="HBoxContainer" parent="FormContainer"]
custom_minimum_size = Vector2(1070, 0)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 6
theme_override_constants/separation = 16

[node name="Label" type="Label" parent="FormContainer/UsernameContainer"]
custom_minimum_size = Vector2(250, 0)
layout_mode = 2
theme_override_font_sizes/font_size = 60
text = "Username"

[node name="VerifUsername" type="LineEdit" parent="FormContainer/UsernameContainer"]
custom_minimum_size = Vector2(800, 60)
layout_mode = 2
theme_override_font_sizes/font_size = 60
max_length = 30

[node name="CodeContainer" type="HBoxContainer" parent="FormContainer"]
custom_minimum_size = Vector2(1070, 0)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 6
theme_override_constants/separation = 16

[node name="Label" type="Label" parent="FormContainer/CodeContainer"]
custom_minimum_size = Vector2(250, 0)
layout_mode = 2
theme_override_font_sizes/font_size = 60
text = "Code"

[node name="VerifCode" type="LineEdit" parent="FormContainer/CodeContainer"]
custom_minimum_size = Vector2(220, 60)
layout_mode = 2
theme_override_font_sizes/font_size = 60
max_length = 30

[node name="ErrorMessage" type="Label" parent="FormContainer"]
custom_minimum_size = Vector2(0, 60)
layout_mode = 2
theme_override_colors/font_color = Color(0.92549, 0, 0, 1)
theme_override_font_sizes/font_size = 32
autowrap_mode = 1

[node name="ConfirmButton" parent="FormContainer" instance=ExtResource("2")]
custom_minimum_size = Vector2(200, 80)
layout_mode = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 48
text = "Submit"

[node name="ResendConfCodeButton" parent="FormContainer" instance=ExtResource("2")]
custom_minimum_size = Vector2(320, 80)
layout_mode = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 48
text = "Resend code"

[node name="ProcessingLabel" type="Label" parent="FormContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 36
text = "Processing..."
horizontal_alignment = 1

[node name="Button" type="Button" parent="."]
custom_minimum_size = Vector2(260, 91)
layout_mode = 0
offset_left = 32.0
offset_top = 32.0
offset_right = 292.0
offset_bottom = 123.0
text = "‚Üê Back"

[node name="transition" parent="." instance=ExtResource("4_6h3fc")]
layout_mode = 0
anchors_preset = 0
anchor_right = 0.0
anchor_bottom = 0.0
offset_right = 1920.0
offset_bottom = 1080.0
grow_horizontal = 1
grow_vertical = 1

[connection signal="pressed" from="FormContainer/ConfirmButton" to="." method="_on_ConfirmButton_pressed"]
[connection signal="pressed" from="FormContainer/ResendConfCodeButton" to="." method="_on_ResendConfCodeButton_pressed"]
[connection signal="pressed" from="Button" to="." method="_on_button_pressed"]
